update projects page

--- a/_posts/2020-09-04-acid-base.md
+++ b/_posts/2020-09-04-acid-base.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Acid-Base: Fencl Stewart (Interactive)"
+title: "Acid-Base Interpreter: Fencl Stewart (Interactive)"
 categories: programming
 ---
 
