Update about me

--- a/_posts/2020-09-04-acid-base.md
+++ b/_posts/2020-09-04-acid-base.md
@@ -4,9 +4,7 @@ title: "Acid-Base Interpreter: Fencl Stewart (Interactive)"
 categories: programming
 ---
 
-## What does it do?
-
-This interactive application allows you to automatically interpret blood gases using the Fencl Stewart Approach with a graph that helps with visualisation of the steps.
+Automatically interpret blood gases using the Fencl Stewart Approach with an interactive graph that helps with visualisation of the steps.
 
 ## How to use it?
 
