add project description for svhm

--- a/_posts/2020-09-04-acid-base.md
+++ b/_posts/2020-09-04-acid-base.md
@@ -4,7 +4,7 @@ title: "Acid-Base Interpreter: Fencl Stewart (Interactive)"
 categories: programming
 ---
 
-Automatically interpret blood gases using the Fencl Stewart Approach with an interactive graph that helps with visualisation of the steps.
+Interpret blood gases using the Fencl Stewart Approach with an interactive graph for visualisation.
 
 ## How to use it?
 
